<resources>

    <string name="app_name">Application Location Free</string>

    <string name="activity_main_title">Application Location</string>

    <string name="firstLineDefaultText">Test Successful!</string>
    <string name="secondLineDefaultText">Ready!</string>

    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_export">Export</string>
    <string name="button_add">Add</string>
    <string name="button_list">List</string>

    <string name="dateFormat">yyyy-MM-dd HH:mm:ss.SSS--zzzz EEEE</string>
    <string name="str_old_value">--</string>
    <string name="str_new_value">"\n"</string>

    <string name="locationGraphActivityTitle">Location Graph</string>
    <string name="button_graph">Graph</string>

    <string name="graph_latitude_label">Latitude</string>
    <string name="graph_longitude_label">Longitude</string>
    <string name="graph_empty_string"></string>

    <string name="graph_constant_width_string_longitude">AA</string>
    <string name="graph_constant_width_string_latitude">AA</string>

    <string name="graph_longitude_min_label">| Longitude Min (deg)</string>
    <string name="graph_longitude_max_label">| Longitude Max (deg)</string>

    <string name="graph_latitude_min_label">- Latitude Min (deg)</string>
    <string name="graph_latitude_max_label">- Latitude Max (deg)</string>

    <string name="graph_latitude_max">90</string>
    <string name="graph_latitude_min">-90</string>
    <string name="graph_longitude_max">180</string>
    <string name="graph_longitude_min">-180</string>
    <string name="punctuation_mark_colon_and_space_coordinates">" :  "</string>

    <string name="controls_year_label">Year</string>
    <string name="controls_month_label">Month</string>
    <string name="controls_day_label">Day</string>
    <string name="controls_hour_label">Hour</string>
    <string name="controls_minute_label">Minute</string>
    <string name="controls_second_label">Second</string>

    <string name="controls_start_time_label">Start Time</string>
    <string name="controls_end_time_label">End Time</string>

    <string name="controls_time_format_year">yyyy</string>
    <string name="controls_time_format">yyyy-MM-dd-HH-mm-ss</string>
    <string name="controls_string_split_str">-</string>

    <string name="controls_time_format_str_to_date">yyyy-MM-dd-HH-mm-ss-SSS</string>
    <string name="controls_string_merge_str">-</string>

    <string name="controls_month_max">12</string>
    <string name="controls_month_min">1</string>
    <string name="controls_day_max">31</string>
    <string name="controls_day_min">1</string>
    <string name="controls_hour_max">23</string>
    <string name="controls_hour_min">0</string>
    <string name="controls_minute_max">59</string>
    <string name="controls_minute_min">0</string>
    <string name="controls_second_max">59</string>
    <string name="controls_second_min">0</string>

    <string name="test_successful_label">Test Successful!</string>
    <string name="no_data_to_display_label">No data to display!</string>

    <string name="time_label">Time</string>
    <string name="latitude_label">Latitude (deg)</string>
    <string name="longitude_label">Longitude (deg)</string>
    <string name="altitude_label">Altitude (m)</string>
    <string name="speed_label">Speed (m/s)</string>
    <string name="accuracy_label">Accuracy (m)</string>
    <string name="bearing_label">Bearing (deg)</string>
    <string name="provider_label">Provider</string>
    <string name="information_label">Information</string>
    <string name="punctuation_mark_colon_and_space">" :  "</string>

    <string name="data_export_activity_title">Data Export</string>
    <string name="data_export_activity_button_export">Export</string>
    <string name="file_name_for_data_export">"Location Data "</string>
    <string name="date_format_for_data_export">yyyy MM dd HH mm ss SSS</string>
    <string name="file_extension_for_data_export">".txt"</string>
    <string name="data_export_progress_started">"Progress: Started..."</string>
    <string name="data_export_progress_completed">"Progress: Completed."</string>
    <string name="data_export_progress">"Progress: "</string>
    <string name="data_export_first_line">"index;id;formattedTime;latitude;longitude;altitude;accuracy;provider;speed;bearing;information\n"</string>
    <string name="data_export_selected_number_of_data">"Selected Data: "</string>

    <string name="data_add_information_activity_title">Add Information</string>
    <string name="textview_information">Information</string>

    <string name="information_button_clear">Clear</string>
    <string name="information_button_add">Add</string>

    <string name="toggle_button_text">Information</string>
    <string name="toggle_button_on_text">Enabled</string>
    <string name="toggle_button_off_text">Disabled</string>

    <string name="add_information_dialog_title">Information</string>
    <string name="add_information_dialog_message">Completed.</string>
    <string name="add_information_dialog_neutral_button">OK</string>

    <string name="add_information_dialog_title_for_no_data">Information</string>
    <string name="add_information_dialog_message_for_no_data">No data to add information.</string>
    <string name="add_information_dialog_neutral_button_for_no_data">OK</string>

    <string name="data_export_dialog_title">Information</string>
    <string name="data_export_dialog_message_first_line">Completed.</string>
    <string name="data_export_dialog_message_second_line">"\nOutput File Path: "</string>
    <string name="data_export_dialog_neutral_button">OK</string>

    <string name="data_export_dialog_title_for_no_data">Information</string>
    <string name="data_export_dialog_message_for_no_data">No data selected.</string>
    <string name="data_export_dialog_neutral_button_for_no_data">OK</string>

    <string name="button_start_location_graph">Start</string>
    <string name="button_stop_location_graph">Stop</string>

    <string name="toggle_live_graph_text">Live Graph</string>
    <string name="toggle_button_live_graph_on_text">Enabled</string>
    <string name="toggle_button_live_graph_off_text">Disabled</string>

    <string name="button_set_start_time">Set Start Time to Current Time</string>

    <string name="list_data_activity_title">List Data</string>
    <string name="list_data_activity_button_delete">Delete</string>
    <string name="list_data_activity_button_update">Update</string>

    <string name="list_data_delete_completed_dialog_title">Information</string>
    <string name="list_data_delete_completed_dialog_message">Deleted.</string>
    <string name="list_data_delete_completed_dialog_neutral_button">OK</string>

    <string name="list_data_delete_started_dialog_title">Information</string>
    <string name="list_data_delete_started_dialog_message">Are you sure you want to delete?</string>
    <string name="list_data_delete_started_dialog_negative_button">Cancel</string>
    <string name="list_data_delete_started_dialog_positive_button">OK</string>

    <string name="activity_data_update_information_textview_information">Information</string>
    <string name="activity_data_update_information_button_clear">Clear</string>
    <string name="activity_data_update_information_button_update">Update</string>
    <string name="activity_data_update_information_title">Update Information</string>

    <string name="activity_data_update_information_dialog_title">Information</string>
    <string name="activity_data_update_information_dialog_message">Updated.</string>
    <string name="activity_data_update_information_dialog_neutral_button">OK</string>

    <string name="turn_on_gps_dialog_title">Information</string>
    <string name="turn_on_gps_dialog_message">Location provider is off. Would you like to turn on location provider?</string>
    <string name="turn_on_gps_dialog_positive_button">YES</string>
    <string name="turn_on_gps_dialog_negative_button">NO</string>

    <string name="main_activity_dialog_title_for_no_data">Information</string>
    <string name="main_activity_dialog_message_for_no_data">There are no data.</string>
    <string name="main_activity_dialog_neutral_button_for_no_data">OK</string>

</resources>
