<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dataProperties"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/recycler_view_item_border_line"
    android:paddingTop="4dp"
    android:paddingBottom="4dp"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierForVerticalAlignment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="textViewTimeLabel, textViewLatitudeLabel, textViewLongitudeLabel, textViewAltitudeLabel, textViewAccuracyLabel, textViewSpeedLabel, textViewBearingLabel, textViewProviderLabel" />

    <TextView
        android:id="@+id/textViewTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTimeLabelPunctuation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/punctuation_mark_colon_and_space"
        app:layout_constraintLeft_toRightOf="@+id/barrierForVerticalAlignment"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewTimeLabel" />

    <TextView
        android:id="@+id/textViewTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstLineDefaultText"
        app:layout_constraintLeft_toRightOf="@+id/textViewTimeLabelPunctuation"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewTimeLabel" />

    <TextView
        android:id="@+id/textViewLatitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/latitude_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimeValue" />

    <TextView
        android:id="@+id/textViewLatitudeLabelPunctuation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/punctuation_mark_colon_and_space"
        app:layout_constraintLeft_toRightOf="@+id/barrierForVerticalAlignment"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewLatitudeLabel" />

    <TextView
        android:id="@+id/textViewLatitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstLineDefaultText"
        app:layout_constraintLeft_toRightOf="@+id/textViewLatitudeLabelPunctuation"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewLatitudeLabel" />

    <TextView
        android:id="@+id/textViewLongitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/longitude_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLatitudeValue" />

    <TextView
        android:id="@+id/textViewLongitudeLabelPunctuation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/punctuation_mark_colon_and_space"
        app:layout_constraintLeft_toRightOf="@+id/barrierForVerticalAlignment"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewLongitudeLabel" />

    <TextView
        android:id="@+id/textViewLongitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstLineDefaultText"
        app:layout_constraintLeft_toRightOf="@+id/textViewLongitudeLabelPunctuation"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewLongitudeLabel" />

    <TextView
        android:id="@+id/textViewAltitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/altitude_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLongitudeValue" />

    <TextView
        android:id="@+id/textViewAltitudeLabelPunctuation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/punctuation_mark_colon_and_space"
        app:layout_constraintLeft_toRightOf="@+id/barrierForVerticalAlignment"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewAltitudeLabel" />

    <TextView
        android:id="@+id/textViewAltitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstLineDefaultText"
        app:layout_constraintLeft_toRightOf="@+id/textViewAltitudeLabelPunctuation"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewAltitudeLabel" />

    <TextView
        android:id="@+id/textViewAccuracyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/accuracy_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAltitudeValue" />

    <TextView
        android:id="@+id/textViewAccuracyLabelPunctuation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/punctuation_mark_colon_and_space"
        app:layout_constraintLeft_toRightOf="@+id/barrierForVerticalAlignment"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewAccuracyLabel" />

    <TextView
        android:id="@+id/textViewAccuracyValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstLineDefaultText"
        app:layout_constraintLeft_toRightOf="@+id/textViewAccuracyLabelPunctuation"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewAccuracyLabel" />

    <TextView
        android:id="@+id/textViewSpeedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/speed_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAccuracyValue" />

    <TextView
        android:id="@+id/textViewSpeedLabelPunctuation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/punctuation_mark_colon_and_space"
        app:layout_constraintLeft_toRightOf="@+id/barrierForVerticalAlignment"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewSpeedLabel" />

    <TextView
        android:id="@+id/textViewSpeedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstLineDefaultText"
        app:layout_constraintLeft_toRightOf="@+id/textViewSpeedLabelPunctuation"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewSpeedLabel" />

    <TextView
        android:id="@+id/textViewBearingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/bearing_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSpeedValue" />

    <TextView
        android:id="@+id/textViewBearingLabelPunctuation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/punctuation_mark_colon_and_space"
        app:layout_constraintLeft_toRightOf="@+id/barrierForVerticalAlignment"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewBearingLabel" />

    <TextView
        android:id="@+id/textViewBearingValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstLineDefaultText"
        app:layout_constraintLeft_toRightOf="@+id/textViewBearingLabelPunctuation"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewBearingLabel" />

    <TextView
        android:id="@+id/textViewProviderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/provider_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBearingValue" />

    <TextView
        android:id="@+id/textViewProviderLabelPunctuation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/punctuation_mark_colon_and_space"
        app:layout_constraintLeft_toRightOf="@+id/barrierForVerticalAlignment"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewProviderLabel" />

    <TextView
        android:id="@+id/textViewProviderValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstLineDefaultText"
        app:layout_constraintLeft_toRightOf="@+id/textViewProviderLabelPunctuation"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewProviderLabel" />


    <TextView
        android:id="@+id/textViewInformationLabel"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/information_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewProviderValue" />

    <TextView
        android:id="@+id/textViewInformationLabelPunctuation"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/punctuation_mark_colon_and_space"
        app:layout_constraintLeft_toRightOf="@+id/barrierForVerticalAlignment"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewInformationLabel" />

    <TextView
        android:id="@+id/textViewInformationValue"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstLineDefaultText"
        app:layout_constraintLeft_toRightOf="@+id/textViewInformationLabelPunctuation"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewInformationLabel" />

    <Button
        android:id="@+id/buttonDelete"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorButton"
        android:text="@string/list_data_activity_button_delete"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/buttonUpdate"
        app:layout_constraintTop_toBottomOf="@+id/textViewInformationValue" />

    <Button
        android:id="@+id/buttonUpdate"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:background="@color/colorButton"
        android:text="@string/list_data_activity_button_update"
        app:layout_constraintLeft_toRightOf="@+id/buttonDelete"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonDelete" />

    <Space
        android:id="@+id/spaceBottom"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDelete" />

</androidx.constraintlayout.widget.ConstraintLayout>